Changes in version 4.1.4
----------------------

- Fix definition of anchor peaks for peakGroups alignment with subset
  (issue #702).
- Add `filterMsLevel` method for `MsExperiment` and `XcmsExperiment`.
- Ensure chunk-wise processing of Spectra (introduced with version 1.13.2) is
  disabled when xcms is using its own chunk-wise processing.

Changes in version 4.1.3
----------------------

- Add parameter `verboseBetaColumns` to `CentWaveParam` to enable calculation
  of additional peak quality metrics comparing the EIC to an idealized bell
  curve.

Changes in version 4.1.2
----------------------

- Add a `param =` to generic function `storeResults`: `PlainTextParam` to save
  an `XcmsExperiment` or `MsExperiment` object as colleciton of plain text
  files.

Changes in version 4.1.1
----------------------

- Add method `storeResults` and one of its `param =`: `RDataParam` to save an
  `XcmsExperiment` object as an .RData file.

Changes in version 3.99.6
----------------------

- Add method to coerce a `XcmsExperiment` to a `xcmsSet` (issue #696).
- Support providing only `mz` or `rt` also for `chromatogram,MsExperiment`.


Changes in version 3.99.5
----------------------

- Only `mz` or `rt` need to be provided for `chromatogram`.


Changes in version 3.99.4
----------------------

- Add `chromPeakChromatograms` function to extract (EIC) chromatograms for
  chromatographic peaks.


Changes in version 3.99.3
----------------------

- Small fixes in the *direct injection* vignette.
- Add parameter `isolationWindowTargetMz` to the `chromatogram` function for
  `MsExperiment` and `XcmsExperiment` to ensure MS2 chromatographic data is
  extracted from the MS2 spectra containing fragments of the compound of
  interest.


Changes in version 3.99.2
----------------------

- Add the `xmse` data set representing an `XcmsExperiment` object.
- Update the *compounding* vignette to use the new objects.
- Add `loadXcmsData` to load test data objects (and fix/update paths).