@@ -858,7 +858,7 @@ setMethod(
                 chunkSize = chunkSize, BPPARAM = BPPARAM)
         }
         ## Assign/define peak IDs.
-        pkd <- data.frame(ms_level = rep(msLevel, nrow(res)),
+        pkd <- data.frame(ms_level = rep(as.integer(msLevel), nrow(res)),
                           is_filled = rep(FALSE, nrow(res)))
         ph <- XProcessHistory(param = param,
                               type. = .PROCSTEP.PEAK.DETECTION,
@@ -1224,7 +1224,7 @@ setMethod(
         maxi <- max(
             0, as.integer(sub("CP", "", rownames(chromPeaks(object)))))
         rownames(res) <- .featureIDs(nr, "CP", maxi + 1)
-        pkd <- data.frame(ms_level = rep(msLevel, nr),
+        pkd <- data.frame(ms_level = rep(as.integer(msLevel), nr),
                           is_filled = rep(FALSE, nr))
         rownames(pkd) <- rownames(res)
         pb$tick()
@@ -1554,7 +1554,7 @@ setMethod(
             stop("No chromatographic peaks present. ",
                  "Please run 'findChromPeaks' first.")
         res <- .manual_feature_definitions(chromPeaks(object), peakIdx)
-        res$ms_level <- msLevel
+        res$ms_level <- as.integer(msLevel)
         if (hasFeatures(object)) {
             maxi <- max(as.integer(
                 sub("FT", "", rownames(featureDefinitions(object)))))
@@ -1840,7 +1840,7 @@ setMethod(
         nr <- nrow(res)
         maxi <- max(as.integer(sub("CP", "", rownames(chromPeaks(object)))))
         rownames(res) <- .featureIDs(nr, "CP", maxi + 1)
-        cpd <- data.frame(ms_level = rep(msLevel, nr),
+        cpd <- data.frame(ms_level = rep(as.integer(msLevel), nr),
                           is_filled = rep(TRUE, nr))
         rownames(cpd) <- rownames(res)
         object@chromPeaks <- rbind(object@chromPeaks, res)
@@ -1976,6 +1976,3 @@ setMethod(
         object[i = sort(unique(file)), keepAdjustedRtime = keepAdjustedRtime,
                keepFeatures = keepFeatures, ...]
     })
-
-## TODO filterMsLevel? Function not yet needed. In case, needs also an
-## implementation for MsExperiment: update the spectra-sample-mapping.
